rust/tests/snapshots/output/account__logout_all_yes.snap
---
source: tests/cli/snapshots.rs
---
$ vendo logout --all --yes
exit: 0
--- stdout ---
Done: Logged out. All profiles removed.
