rust/tests/snapshots/output/account__logout_json.snap
---
source: tests/cli/snapshots.rs
---
$ vendo logout --json
exit: 0
--- stdout ---
{
  "removed": [
    "beta"
  ]
}
