rust/tests/snapshots/output/account__profile_current.snap
---
source: tests/cli/snapshots.rs
---
$ vendo profile current
exit: 0
--- stdout ---
Current Profile

  Profile:     alpha
  Account ID:  acct-alpha
  Base URL:    [stub]

  Saved profile: alpha (active)  acct-alpha  [stub]
