rust/tests/snapshots/output/account__profile_list.snap
---
source: tests/cli/snapshots.rs
---
$ vendo profile list
exit: 0
--- stdout ---
* alpha (active)  acct-alpha  [stub]
  beta  acct-beta  [stub]
