rust/tests/snapshots/output/account__profile_switch.snap
---
source: tests/cli/snapshots.rs
---
$ vendo profile switch alpha
exit: 0
--- stdout ---
Done: Switched to profile alpha.
  Account ID: acct-alpha  Base URL: [stub]
  Verify with `vendo workspace`.
