rust/tests/snapshots/output/account__profile_switch_json.snap
---
source: tests/cli/snapshots.rs
---
$ vendo profile switch alpha --json
exit: 0
--- stdout ---
{
  "profile": {
    "name": "alpha",
    "active": true,
    "accountId": "acct-alpha",
    "baseUrl": "[stub]"
  }
}
