rust/tests/snapshots/output/account__whoami.snap
---
source: tests/cli/snapshots.rs
---
$ vendo whoami
exit: 0
--- stdout ---

Demo Account (synthetic)

  Account:     demo-account
  Account ID:  acct-alpha
  Profile:     alpha
  Base URL:    [stub]
  API Key:     key_fake_0001
  Scopes:      full access

  Profiles
    * alpha  acct-alpha  [stub]
      beta  acct-beta  [stub]

  Switch with `vendo profile switch` or target one command with `vendo --profile <name> ...`.
